# hakoniwa-core-cpp-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bash  cleanup.bash  default-cmake-options.cmake  docs.bash  hako-mmap-set.bash  hako-mmap-set.bat  hako-ramdisk.bash  hako-setup-check.bash  install.bash  install.bat  test.bash
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  doxygen.yml
bindings/: CMakeLists.txt  hako_asset.i
bindings/elixir/: CMakeLists.txt  hako_asset_elixir_nif.c
bindings/elixir_project/: .gitignore  README.md  mix.exs
bindings/elixir_project/lib/: hako_api.ex  hako_asset.ex  hako_conductor.ex  hako_pdu.exs  hako_simevent.ex
bindings/elixir_project/lib/hako_binary/: binary_io.ex  binary_reader.ex  binary_writer.ex  offset_map.ex  offset_parser.ex
bindings/elixir_project/lib/impl/: hako_asset_impl.ex
bindings/elixir_project/src/: CMakeLists.txt  hako_asset_elixir_nif.c
bindings/elixir_project/test/: hako_asset_test.exs  hako_conductor_test.exs  hako_simevent_test.exs
bindings/python/: CMakeLists.txt  hako_asset_python.cpp  hako_pdu.py  install.bash
bindings/python/hako_binary/: binary_io.py  binary_reader.py  binary_writer.py  offset_map.py  offset_parser.py
bindings/python/hako_binary/offset/ev3_msgs/: Ev3PduActuatorHeader.offset
bindings/python/hako_binary/offset/hako_mavlink2_msgs/: HakoSERVO_OUTPUT_RAW.offset
bindings/python/hako_binary/offset/hako_mavlink_msgs/: HakoAHRS2.offset  HakoATTITUDE.offset  HakoGLOBAL_POSITION_INT.offset  HakoHeartbeat.offset  HakoSERVO_OUTPUT_RAW.offset  HakoSystemTime.offset
bindings/python/hako_binary/offset/hako_msgs/: Disturbance.offset  DisturbanceAtm.offset  DisturbanceBoundary.offset  GameControllerOperation.offset  ImpulseCollision.offset  MonitorCameraCmd.offset  MonitorCameraData.offset  ShareObjectOwner.offset  ShareObjectOwnerRequest.offset  ShareObjectOwnerResponse.offset  SimTime.offset
bindings/python/hako_binary/offset/hako_srv_msgs/: AddTwoIntsRequest.offset  AddTwoIntsRequestPacket.offset  AddTwoIntsResponse.offset  AddTwoIntsResponsePacket.offset  ServiceRequestHeader.offset  ServiceResponseHeader.offset
bindings/python/hako_binary/offset/mavros_msgs/: AttitudeTarget.offset  GlobalPositionTarget.offset
bindings/python/hako_binary/offset/sensor_msgs/: PointCloud2.offset
bindings/python/hako_binary/offset/std_msgs/: Byte.offset  ByteMultiArray.offset  Char.offset
bindings/python/hako_binary/sample/: Ev3PduSensor.json
bindings/ruby/: CMakeLists.txt
docs/: Doxyfile.in  README.md  api_topics.dox  mainpage.md  pdu_types.dox
examples/: CMakeLists.txt  README.md
examples/athrill_sample/: CMakeLists.txt  custom.json
examples/athrill_sample/src/: athrill_sample.c
examples/athrill_sample/src/include/: pdu_primitive_ctypes.h
examples/athrill_sample/src/include/std_msgs/: pdu_ctype_UInt32.h
examples/hako_drone/: CMakeLists.txt  custom.json  drone_cmd.py  hakosim.py
examples/hako_drone/src/: drone_cmd.c  pdu_primitive_ctypes.h
examples/hako_drone/src/hako_msgs/: pdu_ctype_Collision.h  pdu_ctype_Disturbance.h  pdu_ctype_DisturbanceTemperature.h  pdu_ctype_HakoDroneCmdHeader.h  pdu_ctype_HakoDroneCmdLand.h  pdu_ctype_HakoDroneCmdMove.h  pdu_ctype_HakoDroneCmdTakeoff.h  pdu_ctype_ManualPosAttControl.h
examples/hello_world/: CMakeLists.txt  README.md  custom.json  hello_world.exs  hello_world.py
examples/hello_world/elixir_hello_world/: .gitignore  README.md  hello_world.exs  mix.exs
examples/hello_world/elixir_hello_world/lib/: hako_asset.ex
examples/hello_world/elixir_hello_world/test/: elixir_hello_world_test.exs
examples/hello_world/src/: hello_world.c
examples/measure/: README.md  asset_measure.py  calc-final-results.py  calc-result.py  check-time-diff.py  check-time.bash  final_results.csv  graph.py  master.py  mean.bash  measure-asset-run.bash  measure.bash  plot-final-results.py  plot-results.py  run.bash
examples/pdu_communication/: CMakeLists.txt  README.md  asset_controller.py  asset_plant.py  custom.json  pdu_info.py
examples/pdu_communication/src/: asset_controller.c  asset_plant.c  pdu_info.h
examples/pdu_communication/src/include/geometry_msgs/: pdu_ctype_Point.h  pdu_ctype_Pose.h  pdu_ctype_PoseWithCovariance.h  pdu_ctype_Quaternion.h  pdu_ctype_Transform.h  pdu_ctype_TransformStamped.h  pdu_ctype_Twist.h  pdu_ctype_TwistWithCovariance.h  pdu_ctype_Vector3.h  pdu_ctype_conv_Point.hpp  pdu_ctype_conv_Pose.hpp  pdu_ctype_conv_PoseWithCovariance.hpp  pdu_ctype_conv_Quaternion.hpp  pdu_ctype_conv_Transform.hpp  pdu_ctype_conv_TransformStamped.hpp  pdu_ctype_conv_Twist.hpp  pdu_ctype_conv_TwistWithCovariance.hpp  pdu_ctype_conv_Vector3.hpp
examples/unity_lidar/: custom.json  lidar.py
examples/unity_sample/: asset_controller.py  custom.json  pdu_info.py  run.bash  sample_controller.py
installer/: README.md  install.bash
installer/common/: CMakeLists.txt  build.bash
installer/mac/: install.bash  (+1 more)
lib/: hako_client.h
math/: Hakoniwa-time.pptx  README.md
proxy/: start_athrill.bash
py/: binary_test.py  hako.py  hako_env.py  hako_robomodel.py  hako_robomodel_any.py  hako_robomodel_any_client.py  hako_robomodel_ev3.py  hako_robomodel_tb3.py  hako_test.py  pdu_read.py  qtable_model.py
src/assets/: CMakeLists.txt
src/assets/src/: hako_asset.cpp  hako_asset_impl.cpp  hako_asset_impl.hpp  hako_asset_impl_measure.cpp  hako_asset_impl_measure.hpp
src/conductor/: CMakeLists.txt
src/conductor/src/: hako_conductor.cpp  hako_conductor_impl.cpp  hako_conductor_impl.hpp
src/hakoc/: CMakeLists.txt
src/hakoc/src/: hako_asset_runner.cpp  hako_asset_runner.h  hako_capi.cpp  hako_capi.h  hako_capi_py.cpp  hako_capi_types.h  hako_client.cpp  hako_client.h
src/proxy/: CMakeLists.txt  sample-proc.bash  sample_config.json
src/proxy/proc/: hako_process.hpp
src/proxy/rpc/: hako_proxy.cpp
src/proxy/src/: hako_proxy.cpp
src/proxy/src/proc/: hako_process.hpp
src/proxy/src/rpc/: CMakeLists.txt  hako_rpc_proxy.cpp
test/: config.json  test_hakoc.py
test/hakoAsset-01/: CMakeLists.txt  test.cpp
(+46 files in other folders)
